--- a/scss/1.layout/_6.partners.scss
+++ b/scss/1.layout/_6.partners.scss
@@ -2,6 +2,7 @@
   width: 100vw;
   margin-left: calc(50% - 50vw);
   overflow: hidden;
+  padding-bottom: 50px;
 
   .flex {
     // flex-wrap: wrap;
