I'm done, that's the longest, and messiest coding and section (brand) i had to work on, now need to move on, and i have no idea how i'm gonna refactor that code, but hopefully that section won't be needed much in the future, so I'm not gonna refactor it unless i have to.

--- a/scss/0.base/_6.base.scss
+++ b/scss/0.base/_6.base.scss
@@ -44,7 +44,7 @@ div {
 }
 
 // Added this later, thought it was going to be a disaster, but it didn't screw up my navbar thankfully, and once I learned how to stretch things past the margin, site looks better
-#container {
+.container {
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
@@ -57,6 +57,6 @@ div {
     width: 970px;
   }
   @include mq("large") {
-    width: 1200px;
+    width: 1255px;
   }
 }
