--- a/css/main.css
+++ b/css/main.css
@@ -383,20 +383,20 @@ div {
 .grid {
   display: grid; }
 
-#container {
+.container {
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px; }
   @media (min-width: 768px) {
-    #container {
+    .container {
       width: 750px; } }
   @media (min-width: 992px) {
-    #container {
+    .container {
       width: 970px; } }
   @media (min-width: 1260px) {
-    #container {
-      width: 1200px; } }
+    .container {
+      width: 1255px; } }
 
 .nav-item--bespoke:hover::after, .nav-item--it-support:hover::after, .nav-item--digital-marketing:hover::after, .nav-item--telecoms-services:hover::after, .nav-item--web-design:hover::after, .nav-item--cyber-security:hover::after, .nav-item--developer-course:hover::after {
   content: "";
@@ -1533,41 +1533,52 @@ div {
   text-transform: uppercase;
   display: inline-flex;
   align-items: center;
-  padding: 10px 30px;
+  padding: 10px 26px;
   border-radius: 6px;
-  margin-right: 10px;
-  font-size: 20px; }
+  margin-right: 9px;
+  font-size: 20px;
+  margin-bottom: 20px; }
   .button__brand--welcome-to-netmatters {
     background-color: #272936; }
     .button__brand--welcome-to-netmatters:hover {
       background-color: #121317; }
   .button__brand--google-reviews {
     background-color: #4288f7; }
+    @media (min-width: 992px) {
+      .button__brand--google-reviews {
+        padding: 6px 26px; } }
     .button__brand--google-reviews:hover {
       background-color: #146af4; }
   .button__brand--trustpilot-reviews {
     background-color: #06b67c; }
+    @media (min-width: 992px) {
+      .button__brand--trustpilot-reviews {
+        padding: 6px 26px; } }
     .button__brand--trustpilot-reviews:hover {
       background-color: #009b69; }
 
-#what-our-clients-think {
-  margin-top: 22px;
-  margin-bottom: 51px; }
+@media (min-width: 992px) {
+  #brand-star-icon-div {
+    margin-bottom: 10px; } }
 
-.brand-section {
-  background-color: #333645;
-  padding: 50px 15px;
+#brand-background {
   width: 100vw;
   margin-left: calc(50% - 50vw);
+  background-color: #333645; }
+
+.brand-section {
+  padding: 50px 15px;
   color: white; }
   .brand-section h2 {
-    margin-bottom: 40px; }
+    margin-bottom: 52px; }
     .brand-section h2 strong {
       font-size: 2.25rem;
       font-weight: 600; }
   .brand-section p {
     line-height: 1.875rem;
     margin-bottom: 25px; }
+    .brand-section p:first-of-type {
+      margin-top: -23px; }
     .brand-section p strong {
       font-weight: 600; }
     .brand-section p a {
@@ -1575,20 +1586,43 @@ div {
       .brand-section p a:hover {
         text-decoration: underline; }
 
-.brand-section__content div {
+.brand-section__content {
   display: flex;
-  flex-wrap: wrap; }
-.brand-section__content div:last-child p:first-of-type {
-  font-weight: 600;
-  font-size: 1.3rem;
-  font-style: italic; }
-.brand-section__content div:last-child p:last-of-type {
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: #a3a8ac; }
-  .brand-section__content div:last-child p:last-of-type a {
-    font-size: inherit;
-    font-weight: inherit;
-    color: white; }
+  flex-direction: column; }
+  .brand-section__content div:last-child {
+    display: inline-block; }
+    .brand-section__content div:last-child h2 {
+      margin-top: 50px; }
+  @media (min-width: 992px) {
+    .brand-section__content {
+      display: flex;
+      flex-direction: row; }
+      .brand-section__content div {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row; }
+        .brand-section__content div:not(.brand-buttons):not(#brand-star-icon-div) {
+          padding: 0 15px; }
+      .brand-section__content div:last-child {
+        display: flex; }
+        .brand-section__content div:last-child h2 {
+          margin-top: 0; }
+      .brand-section__content div:first-child {
+        flex: 1; }
+      .brand-section__content div:last-child {
+        flex: 1; } }
+  .brand-section__content div:last-child p:first-of-type {
+    font-weight: 600;
+    font-size: 1.3rem;
+    font-style: italic;
+    margin-top: 26px; }
+  .brand-section__content div:last-child p:last-of-type {
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: #a3a8ac; }
+    .brand-section__content div:last-child p:last-of-type a {
+      font-size: inherit;
+      font-weight: inherit;
+      color: white; }
 
 /*# sourceMappingURL=main.css.map */
