--- a/scss/1.layout/_3.submenu.scss
+++ b/scss/1.layout/_3.submenu.scss
@@ -149,7 +149,7 @@
   grid-template-areas:
     "heading heading heading"
     "business-mobile hosted-voip business-voip"
-    "business-broadband leased-lines 3cx";
+    "business-broadband leased-lines threecx";
 }
 
 #web-design-grid {
