--- a/scss/1.layout/_7.brand.scss
+++ b/scss/1.layout/_7.brand.scss
@@ -1,6 +1,6 @@
 #container-brand-section {
   @include mq("large") {
-    width: 1255px; // Set your desired width here
+    width: 1255px;
   }
 }
 
