--- a/css/main.css
+++ b/css/main.css
@@ -1636,6 +1636,27 @@ div {
     width: 1200px;
     margin-left: calc(50% - 1200px / 2); } }
 
+.articles-xsmall {
+  justify-content: center;
+  padding: 0 15px;
+  margin-bottom: 20px;
+  font-weight: 600;
+  font-size: 1.625rem;
+  color: #333645; }
+  .articles-xsmall a {
+    font-weight: inherit;
+    font-size: inherit;
+    color: inherit; }
+  .articles-xsmall span {
+    font-weight: inherit;
+    font-size: inherit;
+    color: inherit; }
+  .articles-xsmall:hover {
+    text-decoration: underline; }
+  @media (min-width: 768px) {
+    .articles-xsmall {
+      display: none; } }
+
 .articles-bar {
   padding-top: 50px; }
 
@@ -1803,5 +1824,22 @@ div {
     content: "";
     color: #333645;
     display: inherit; }
+
+.clients-section {
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
+  overflow: hidden;
+  padding: 50px 0; }
+
+.clients-details {
+  display: none; }
+
+.clients-item {
+  padding: 0 20px;
+  margin-right: 50px; }
+  .clients-item img {
+    filter: grayscale(1); }
+    .clients-item img:hover {
+      filter: grayscale(0); }
 
 /*# sourceMappingURL=main.css.map */
