--- a/scss/1.layout/_8.articles.scss
+++ b/scss/1.layout/_8.articles.scss
@@ -5,6 +5,36 @@
   }
 }
 
+.articles-xsmall {
+  justify-content: center;
+  padding: 0 15px;
+  margin-bottom: 20px;
+  //align-items: center;
+  font-weight: 600;
+  font-size: 1.625rem;
+  color: #333645;
+
+  a {
+    font-weight: inherit;
+    font-size: inherit;
+    color: inherit;
+  }
+
+  span {
+    font-weight: inherit;
+    font-size: inherit;
+    color: inherit;
+  }
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  @include mq("small") {
+    display: none;
+  }
+}
+
 .articles-bar {
   padding-top: 50px;
 }
