--- a/css/main.css
+++ b/css/main.css
@@ -1829,17 +1829,29 @@ div {
   width: 100vw;
   margin-left: calc(50% - 50vw);
   overflow: hidden;
-  padding: 50px 0; }
+  padding: 50px 0;
+  position: relative; }
 
 .clients-details {
-  display: none; }
+  display: none;
+  position: absolute;
+  bottom: 100%;
+  z-index: 1000; }
+
+.clients-box {
+  background-color: #333645;
+  color: #fff;
+  padding: 20px;
+  max-width: 280px; }
 
 .clients-item {
   padding: 0 20px;
   margin-right: 50px; }
-  .clients-item img {
+  .clients-item:hover .clients-details {
+    display: unset; }
+  .clients-item picture {
     filter: grayscale(1); }
-    .clients-item img:hover {
+    .clients-item picture:hover {
       filter: grayscale(0); }
 
 /*# sourceMappingURL=main.css.map */
