finished footer and bottom footer

--- a/css/main.css
+++ b/css/main.css
@@ -1854,4 +1854,139 @@ div {
     .clients-item picture:hover {
       filter: grayscale(0); }
 
+.footer-bottom {
+  padding-top: 10px;
+  background-color: #212330; }
+
+.footer-bottom-copyright {
+  padding: 5px 0 10px;
+  color: white;
+  font-size: 0.8125rem; }
+  .footer-bottom-copyright a {
+    font-size: inherit; }
+    .footer-bottom-copyright a:hover {
+      text-decoration: underline; }
+  .footer-bottom-copyright span {
+    font-size: inherit; }
+  @media (min-width: 1px) and (max-width: 767px) {
+    .footer-bottom-copyright {
+      flex-direction: column; }
+      .footer-bottom-copyright span:nth-child(3) {
+        display: none; } }
+
+.icon__footer--facebook {
+  font-family: "icomoon" !important;
+  margin: 0 7px 0 0;
+  padding: 12px 22px 16px;
+  font-size: 26px;
+  line-height: 26px;
+  background-color: #212330; }
+  .icon__footer--facebook:before {
+    content: "";
+    display: inline-block; }
+  .icon__footer--facebook:hover {
+    background-color: #3c5998; }
+.icon__footer--instagram {
+  font-family: "icomoon" !important;
+  margin: 0 7px 0 0;
+  padding: 12px 22px 16px;
+  font-size: 26px;
+  line-height: 26px;
+  background-color: #212330; }
+  .icon__footer--instagram:before {
+    content: "";
+    display: inline-block; }
+  .icon__footer--instagram:hover {
+    background-color: #0177b5; }
+.icon__footer--twitter {
+  font-family: "icomoon" !important;
+  margin: 0 7px 0 0;
+  padding: 12px 22px 16px;
+  font-size: 26px;
+  line-height: 26px;
+  background-color: #212330; }
+  .icon__footer--twitter:before {
+    content: "";
+    display: inline-block; }
+  .icon__footer--twitter:hover {
+    background-color: #00aced; }
+.icon__footer--linkedin {
+  font-family: "icomoon" !important;
+  margin: 0 7px 0 0;
+  padding: 12px 22px 16px;
+  font-size: 26px;
+  line-height: 26px;
+  background-color: #212330; }
+  .icon__footer--linkedin:before {
+    content: "";
+    display: inline-block; }
+  .icon__footer--linkedin:hover {
+    background-color: #d93175; }
+
+footer {
+  background-color: #323544;
+  color: #fff;
+  padding: 27px 0 0;
+  position: relative; }
+  @media (min-width: 1260px) {
+    footer {
+      padding: 47px 0 0; } }
+
+.footer-flex {
+  display: flex;
+  flex-wrap: wrap; }
+  @media (min-width: 1260px) {
+    .footer-flex {
+      flex-wrap: nowrap; } }
+
+.footer-company-info {
+  flex: 0 0 100%;
+  justify-content: space-between;
+  gap: 20px; }
+  @media (min-width: 1260px) {
+    .footer-company-info {
+      margin-right: 55px; }
+      .footer-company-info img {
+        width: 100%; } }
+  .footer-company-info h4 {
+    margin: 24px 0 36px 0;
+    text-transform: uppercase; }
+  @media (min-width: 1260px) {
+    .footer-company-info {
+      flex: 0 0 30%; } }
+
+.footer-menu-flex {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+  margin: 55px 0 40px 0; }
+  @media (min-width: 1260px) {
+    .footer-menu-flex {
+      width: 75%;
+      margin-top: 0; } }
+
+.footer-menu-item {
+  flex: 0 0 100%;
+  padding: 0 15px 0 0;
+  margin-bottom: 20px; }
+  .footer-menu-item h4 {
+    text-transform: uppercase;
+    margin-bottom: 26px; }
+  .footer-menu-item a {
+    font-size: 0.8125rem;
+    line-height: 1.375rem; }
+    .footer-menu-item a:hover {
+      text-decoration: underline; }
+  @media (min-width: 768px) {
+    .footer-menu-item {
+      flex: 0 0 50%;
+      width: 50vw; } }
+  @media (min-width: 992px) {
+    .footer-menu-item {
+      flex: 0 0 25%;
+      width: 25vw; } }
+  @media (min-width: 1260px) {
+    .footer-menu-item {
+      flex: 0 0 25%; } }
+
 /*# sourceMappingURL=main.css.map */
