--- a/css/main.css
+++ b/css/main.css
@@ -1151,9 +1151,88 @@ div {
 #developer-course-grid {
   grid-template-areas: "heading heading heading" "train-for-career skills-bootcamp scion-faq" "scion-collaborators scion-collaborators scion-collaborators"; }
 
-#banner img {
-  width: 100vw;
-  margin-left: calc(50% - 50vw); }
+.banner-item {
+  position: relative; }
+
+.banner-item-image {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0; }
+  .banner-item-image img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
+.banner-item-content {
+  position: relative;
+  padding: 3.75rem 0;
+  color: white;
+  font-weight: 600; }
+  .banner-item-content h1 {
+    font-size: 2.5rem;
+    line-height: 3rem;
+    font-weight: inherit;
+    margin: 0 0 1.25rem;
+    text-align: center; }
+    @media (min-width: 992px) {
+      .banner-item-content h1 {
+        font-size: 4rem;
+        line-height: 5rem;
+        font-weight: inherit;
+        margin: 0 0 20px 0;
+        text-align: unset; } }
+  .banner-item-content p {
+    margin-bottom: 0.375rem;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    font-weight: inherit;
+    text-align: center; }
+    @media (min-width: 992px) {
+      .banner-item-content p {
+        font-size: 1.625rem;
+        line-height: 2.5rem;
+        font-weight: inherit;
+        width: 70%;
+        text-align: unset;
+        justify-content: flex-start; } }
+  @media (min-width: 1px) and (max-width: 767px) {
+    .banner-item-content {
+      display: inline-flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; } }
+  @media (min-width: 768px) {
+    .banner-item-content {
+      display: inline-flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; } }
+  @media (min-width: 992px) {
+    .banner-item-content {
+      display: block; } }
+
+.icon__banner--right-arrow {
+  font-family: "icomoon" !important;
+  font-size: inherit; }
+  .icon__banner--right-arrow:before {
+    content: "";
+    display: inline-block; }
+
+.button__banner--button-1 {
+  margin-top: 1.938rem;
+  margin-bottom: 1.125rem;
+  line-height: 52px;
+  padding: 5px 20px;
+  font-size: 1.25rem;
+  color: white !important;
+  background-color: #926fb1;
+  border-color: #926fb1;
+  text-transform: uppercase;
+  border-radius: 3px;
+  margin: 31px 0 18px 0;
+  display: inline-block; }
 
 #services-heading {
   justify-content: space-between;
