--- a/scss/0.base/_2.fonts.scss
+++ b/scss/0.base/_2.fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts/icomoon.ttf") format("truetype");
+  src: url("assets/fonts/icomoon.ttf") format("truetype");
 
   font-weight: normal;
   font-style: normal;
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../assets/fonts/poppins-v15-latin-600.woff2") format("woff2");
+  src: url("assets/fonts/poppins-v15-latin-600.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
   font-display: block;
@@ -17,7 +17,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../assets/fonts/poppins-v15-latin-regular.woff2") format("woff2");
+  src: url("assets/fonts/poppins-v15-latin-regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: block;
